# iceberg-rust

./: Cargo.toml
catalogs/iceberg-rest-catalog/src/apis/: configuration.rs  configuration_api_api.rs  mod.rs
catalogs/iceberg-rest-catalog/src/models/: catalog_config.rs  iceberg_error_response.rs  metric_result.rs  o_auth_error.rs  o_auth_token_response.rs  register_table_request.rs  token_type.rs  update_namespace_properties_request.rs  update_namespace_properties_response.rs
catalogs/iceberg-s3tables-catalog/src/: error.rs  lib.rs
datafusion-iceberg-sql/src/: context.rs  lib.rs
datafusion_iceberg/src/: lib.rs  planner.rs  pruning_statistics.rs  sql.rs  statistics.rs  table.rs
datafusion_iceberg/src/catalog/: schema.rs
datafusion_iceberg/src/materialized_view/delta_queries/: fork_node.rs
iceberg-rust-spec/: Cargo.toml
iceberg-rust-spec/src/arrow/: schema.rs
iceberg-rust-spec/src/spec/: manifest_list.rs  schema.rs  table_metadata.rs  types.rs  values.rs
iceberg-rust/src/arrow/: read.rs
iceberg-rust/src/catalog/: commit.rs
iceberg-rust/src/file_format/: parquet.rs
iceberg-rust/src/object_store/: mod.rs
iceberg-rust/src/table/: manifest.rs  manifest_list.rs  mod.rs
iceberg-rust/src/table/transaction/: append.rs  mod.rs  operation.rs  overwrite.rs
iceberg-rust/src/view/transaction/: operation.rs
iceberg-rust/tests/: empty_schema_manifest_test.rs
