[workspace]
members = [
  "iceberg-rust-spec",
  "iceberg-rust",
  "datafusion_iceberg",
  "datafusion-iceberg-sql",
  "catalogs/iceberg-sql-catalog",
  "catalogs/iceberg-rest-catalog",
  "catalogs/iceberg-file-catalog",
  "catalogs/iceberg-glue-catalog",
  "catalogs/iceberg-s3tables-catalog",
]

resolver = "2"

[workspace.dependencies]
apache-avro = "0.17.0"
object_store = { version = "0.11.2", features = ["aws", "gcp"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
futures = "0.3.30"
async-trait = "0.1"
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock"] }
arrow = "54.1.0"
arrow-schema = "54.1.0"

datafusion = { version="45.0.0" }
datafusion-sql = { version="45.0.0" }
datafusion-expr = { version="45.0.0" }
datafusion-common = { version="45.0.0" }
datafusion-execution = { version="45.0.0" }
datafusion-functions = { version="45.0.0" }
datafusion-functions-aggregate = { version="45.0.0" }

parquet = { version = "54.1.0", features = ["async", "object_store"] }
sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "53c291e3e95f176daea954f614409e5f674ec561", features = [
  "visitor",
] }
thiserror = "2"
url = "2.5.4"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
itertools = "0.10.5"
derive-getters = "0.3.0"
tracing = "0.1"
tracing-futures = "0.2"
