[workspace]
members = [
  "catalogs/iceberg-file-catalog",
  "catalogs/iceberg-glue-catalog",
  "catalogs/iceberg-rest-catalog",
  "catalogs/iceberg-s3tables-catalog",
  "catalogs/iceberg-sql-catalog",
  "datafusion-iceberg-sql",
  "datafusion_iceberg",
  "iceberg-rust",
  "iceberg-rust-spec"
]

resolver = "2"

[workspace.dependencies]
apache-avro = "0.17.0"
arrow = "54"
arrow-schema = "54"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
datafusion = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-sql = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-expr = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-common = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-execution = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-functions = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f", features = ["crypto_expressions"] }
datafusion-functions-aggregate = { git="https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
derive-getters = "0.5.0"
derive_builder = "0.20"
futures = "0.3.31"
getrandom = { version = "0.3.1", features = ["std"] }
itertools = "0.14.0"
object_store = { version = "0.11.2", features = ["aws", "gcp"] }
once_map = "0.4"
parquet = { version = "54", features = ["async", "object_store"] }
pin-project-lite = "0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
sqlparser = { version = "0.54.0", features = ["visitor"] }
thiserror = "2"
tracing = "0.1"
tracing-futures = "0.2"
url = "^2.5"
uuid = { version = "1.13.2", features = ["serde", "v4"] }
