[workspace]
members = [
  "catalogs/iceberg-file-catalog",
  "catalogs/iceberg-glue-catalog",
  "catalogs/iceberg-rest-catalog",
  "catalogs/iceberg-s3tables-catalog",
  "catalogs/iceberg-sql-catalog",
  "datafusion-iceberg-sql",
  "datafusion_iceberg",
  "iceberg-rust",
  "iceberg-rust-spec"
]

resolver = "2"

[workspace.dependencies]
apache-avro = "0.17.0"
arrow = "55.0.0"
arrow-schema = "55.0.0"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4.0", default-features = false, features = ["serde", "clock"] }
datafusion = { version= "47.0.0" }
datafusion-sql = { version= "47.0.0" }
datafusion-expr = { version= "47.0.0" }
datafusion-common = { version= "47.0.0" }
datafusion_datasource = { version= "47.0.0" }
datafusion-execution = { version= "47.0.0" }
datafusion-functions = { version= "47.0.0" }
datafusion-functions-aggregate = { version = "47.0.0" }
derive-getters = "0.5.0"
derive_builder = "0.20"
futures = "0.3.31"
getrandom = { version = "0.3.1", features = ["std"] }
itertools = "0.14.0"
lru = "0.16.0"
object_store = { version = "0.12", features = ["aws", "gcp"] }
parquet = { version = "55", features = ["async", "object_store"] }
pin-project-lite = "0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "ed416548dcfe4a73a3240bbf625fb9010a4925c8", features = [
  "visitor",
] }
thiserror = "2"
url = "2.5.4"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
tracing = "0.1"
tracing-futures = "0.2"
